2002-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Fixed apparent typo (confflags defined, $conf_flags used)
2002-10-20  J.H.M. Dassen (Ray) <jdassen@debian.org> 
 autogen.sh:
  - Don't silently continue after errors.
 configure.ac:
  - Provide a description for HAVE_SYS_SELECT_H so autoheader doesn't exit with
    an error.
  - Added a few more warnings: -Wmultichar, -Wabi, -Wctor-dtor-privacy.
 debian/rules:
  - [clean] Clean out generated HTML files.
  - [configure] Actually use confflags variable; simplified testing with a 
    different C++ compiler.
 src/Makefile.am:
  - Support building outside the source directory.
2002-10-15  J.H.M. Dassen (Ray) <jdassen@debian.org>
 debian/libpqxx-dev.files: 
  - Include .la file
 debian/rules:
  - Update config.{guess,sub} from autotools-dev if possible.
  - Ensure all files installed by "make install" end up in a package.
  - Relax shlib dependency to >= the upstream version.
 autogen.sh:
  - libtoolize --force
  - Make it possible to skip configure step through an environment variable.
 config/config.guess, config/config.sub, config/ltmain.sh:
  - Regenerated with current libtool
 debian/changelog, debian/control, debian/rules:
  - Updated for new Debian policy revision.
2002-10-13 16:00 Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Check for automake-1.7
 configure, */Makefile.in:
  - Regenerated with automake 1.7
 configure.ac:
  - Check for <sys/select.h>
  - Bumped revision to 1.1.2
 test/test23.cxx, test/test4.cxx:
  - Replaced Sleep()/sleep() and Windows workaround by select()
2002-09-29 14:00 Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/connection.h:
  - Documented log table creation and contents
 src/connection.cxx:
  - GetNotifs() frees notification structs a little earlier
2002-09-27 02:45 Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection.cxx:
  - Made GetNotifs() a little more aggressive in freeing PGnotify structs
2002-09-25 03:00 Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac: